--- a/style.css
+++ b/style.css
@@ -65,6 +65,17 @@ header {
     /* font-size: 20px; */
     
 }
+
+.nav-up .li:link {
+    display: flex;
+    justify-content: space-around;
+    color: black;
+    /* margin-left: 5px;
+    margin-right: 5px; */
+    padding: 20px;
+    
+}
+
 #hebrgmars {
     flex: 100%;
     font-size: 20px;
@@ -977,7 +988,7 @@ figcaption {
 
         }
     figure img {
-        max-width: 335px;
+        
         max-height: 135px;
         }
     .haside {
@@ -1021,8 +1032,7 @@ figcaption {
 
           }
           #fgcd1 {
-            /* max-width: 335px;
-            max-height: 135px; */
+            
             }
 
           #pfgcd2 {
