--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -598,8 +598,8 @@ activite-image {
     flex-direction: column;
     
     border-radius: 20px;
-    height: 422px;
-    /* margin: 30px; */
+    
+    
  }
 
  .patrouille:nth-child(-n+3) {
@@ -610,7 +610,7 @@ activite-image {
      flex: 100%;
     margin: 0;
     
-    max-height: 445px;
+    height: 445px;
     box-shadow: 1px 1px 10px -2px grey;
     border-radius: 20px;
  }
@@ -621,7 +621,7 @@ activite-image {
                                 surement une maguouille bizarre*/
 
 .emplduo {
-    height: 200px;
+    
     border-radius: 20px;
     flex: 100%;
     margin: 0;
@@ -634,9 +634,10 @@ activite-image {
 }
 
 
-.emplduo:first-child {
-    margin: 0 0 40px 0; /* margin-bottom zero pour le premier element*/
-}
+
+/* .emplduo:first-child {
+    margin: 0 0 40px 0; 
+}                                 margin bottom pour le first element */
 
 
 .emplduo img{
@@ -650,7 +651,7 @@ height: 370px;
 
 #fgcs1 {
     width: 100%;
-    height: 370px;
+    height: 390px;
     border-radius: 20px 20px 0 0;
     object-fit: cover;
 }
@@ -663,19 +664,21 @@ figcaption {
 #pfgcd1 {
     width: 100%;
    
-    max-height: 235px;
+    height: 240px;
+    margin: 0 0 20px 0;
 }
 
 #fgcd1 {
     width: 100%;
-    height: 175px;
+    height: 180px;
     border-radius: 20px 20px 0 0;
     object-fit: cover;
 }
 
 #pfgcd2 {
     
-    max-height: 165px;
+    height: 165px;
+    margin: 20px 0 0 0 ;
 }
 
 #fgcd2 {
@@ -704,31 +707,34 @@ figcaption {
 
 #fgcs2 {
     width: 100%;
-    height: 370px;
+    height: 390px;
     border-radius: 20px 20px 0 0;
     object-fit: cover;
+    
 }
 
 #pfgcd3 {
       
-    max-height: 195px;
+    height: 195px;
+    margin: 0 0 20px 0;
 }
 
 #fgcd3 {
     width: 100%;
-    height: 135px;
+    height: 140px;
     border-radius: 20px 20px 0 0;
     object-fit: cover;
 }
 
 #pfgcd4 {
     
-    max-height: 210px;
+    height: 210px;
+    margin: 20px 0 0 0;
 }
 
 #fgcd4 {
     width: 100%;
-    height: 145px;
+    height: 155px;
     border-radius: 20px 20px 0 0;
     object-fit: cover;
 }
@@ -1009,24 +1015,30 @@ figcaption {
           }      
 
           .patrouille {
-
+            
           }
           .patrouille:nth-child(-n+3) {
             margin: 0;
         }  
           .emplwoan {
-            margin: 10px 5px;
+            /* margin: 10px 5px; */
+            height: 190px;
           }
+
+          /* .emplwoan img {
+              height: 390px;
+          } */
           #fgcs1 {
 
           }
           .emplduo {
-            margin: 10px 5px;
+            /* margin: 10px 5px; */
           }
 
           .emplduo:first-child {
             margin: 0;
         }
+        
 
           #pfgcd1 {
 
