--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1022,6 +1022,7 @@ figcaption {
         }  
           .emplwoan {
             /* margin: 10px 5px; */
+            width: 335px;
             height: 190px;
           }
 
@@ -1041,7 +1042,8 @@ figcaption {
         
 
           #pfgcd1 {
-
+            width: 335px;
+            height: 190px;
           }
           #fgcd1 {
             /* max-width: 335px;
@@ -1049,7 +1051,8 @@ figcaption {
             }
 
           #pfgcd2 {
-
+            width: 335px;
+            height: 190px;
           }
           #fgcd2 {
 
@@ -1067,13 +1070,15 @@ figcaption {
 
           }
           #pfgcd3 {
-
+            width: 335px;
+            height: 190px;
           }
           #fgcd3 {
 
           }
           #pfgcd4 {
-
+            width: 335px;
+            height: 190px;
           }
           #fgcd4 {
 
