--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -484,9 +484,6 @@ div h4 {
   border-radius: 10px;
 }
 
-/* figure img {
-    height: 370px;     ca domine trop   , du coup petit test
-} */
 
 .hebergPopularProposed img {
   border-radius: 20px 0 0 20px;
@@ -595,7 +592,7 @@ figcaption {
   margin: 20px;
 }
 
-#pfgcd1 {
+#ancre-Photo-PetitFormat-1-Activites {
   width: 100%;
 
   height: 240px;
@@ -611,7 +608,7 @@ figcaption {
 
 #pfgcd2 {
   height: 165px;
-  margin: 20px 0 0 0;
+  margin: 20px 0 0 0; /*  le contain de fgcd2 bug ;  a revoir*/
 }
 
 #fgcd2 {
@@ -729,8 +726,8 @@ figcaption {
     color: black;
   }
 
-  #btnActivites:link {
-  }
+  /* #btnActivites:link {
+  } */
 
   #btnActivites:hover {
     border-bottom: 5px solid #0065fc;
@@ -978,7 +975,7 @@ figcaption {
     margin: 0;
   }
 
-  #pfgcd1 {
+  #ancre-Photo-PetitFormat-1-Activites {
     flex: 95%;
     height: 190px;
     margin: 10px 0;
@@ -990,7 +987,7 @@ figcaption {
   #pfgcd2 {
     flex:95%;
     height: 190px;
-    margin: 10px 0;
+    margin: 10px 0;   /* contain de fgcd2 bug en changeant le nom il faut revoir */
   }
   #fgcd2 {
     height: 135px;
