--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -756,9 +756,10 @@ figcaption {
 
         }
    */ 
-   .formulaireInserRecherche {
+   
+   /* .formulaireInserRecherche {
 
-        }    
+        }     */
     #insertionMotsCles {
       flex: 100%;
         } 
