--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -361,6 +361,9 @@ aside {
 .hebergPopularProposed #a1 {
   display: flex;
 }
+.hebergPopularProposed #a2 {
+  display: flex;
+}
 .hebergPopularProposed #a3 {
   display: flex;
 }
